--- a/docs/resources/styles.css
+++ b/docs/resources/styles.css
@@ -70,13 +70,31 @@ input[type="button"]:hover {
 }
 
 @media (max-width: 768px) {
-    table, th, td {
+    table, thead, tbody, th, td, tr {
         display: block;
-        width: 100%;
     }
 
-    th, td {
-        padding: 8px;
+    thead tr {
+        display: none;
+    }
+
+    tr {
+        margin-bottom: 10px;
+    }
+
+    td {
+        text-align: right;
+        padding-left: 50%;
+        position: relative;
+    }
+
+    td::before {
+        content: attr(data-label);
+        position: absolute;
+        left: 0;
+        width: 50%;
+        padding-left: 15px;
+        font-weight: bold;
         text-align: left;
     }
 
